moved some styling to css doc to have for better readability, and fixed mobil

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -130,7 +130,38 @@ section > .content p {
 }
 
 #contact-form {
-    @apply bg-primary duration-500 z-3 px-8 py-6 text-base flex flex-col gap-5 rounded-b-2xl
+    @apply bg-primary duration-500 z-3 px-8 pt-[112px] md:pt-6 pb-6 text-base flex flex-col gap-5 rounded-b-2xl
     left-0 transition-all min-w-full
-    absolute;
+    absolute top-0 md:top-full max-md:h-dvh -translate-y-2/1 overflow-y-auto;
 }
+
+#nav-mobile-section {
+    @apply divide-accent divide-x-1
+    place-content-evenly
+    max-md:absolute
+    flex flex-col md:flex-row lg:basis-1/2 basis-3/4
+    md:*:basis-1/3
+    max-md:h-dvh
+    top-0
+    max-md:pt-[112px]
+    max-md:w-screen
+    max-md:-translate-y-full
+    bg-primary
+    h-full
+    transition-transform
+    duration-600
+    ease-in-out
+    z-4;
+}
+
+nav {
+    @apply flex w-full relative
+    md:divide-x-1 divide-accent
+    items-center
+    justify-between;
+}
+
+nav[data-toggled="true"] > #nav-mobile-section {
+    @apply max-md:translate-y-0;
+}
+
